components/policies/development/konflux-rbac/restrict-binding-denylist/create/restrict-binding-denylist-create-validatingadmissionpolicy.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: restrict-bindings-denylist-create.konflux-ci.dev
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups: ["rbac.authorization.k8s.io"]
      apiVersions: ["v1"]
      operations: ["CREATE"]
      resources: ["rolebindings"]
  variables:
  - name: denyClusterRoles
    expression: '["konflux-secrets-bot-actions", "konflux-model-bot-actions", "konflux-viewer-bot-actions"]'
  validations:
  - expression: |
      !has(object.roleRef) ||
        !has(object.roleRef.name) ||
        !has(object.roleRef.kind) ||
        !(
          object.roleRef.kind == "ClusterRole" &&
          object.roleRef.name in variables.denyClusterRoles)
    messageExpression: |
      "The referenced Role '" + object.roleRef.name + "' is deprecated and can't be used in new RoleBindings"
    # fall-back if something is wrong with the messageExpression above
    message: |
      "The referenced Role is deprecated and can't be used in new RoleBindings"
