components/policies/development/konflux-rbac/restrict-binding-denylist/create/restrict-binding-denylist-create-validatingadmissionpolicybinding.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: restrict-bindings-denylist-create.konflux-ci.dev
spec:
  policyName: restrict-bindings-denylist-create.konflux-ci.dev
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        konflux-ci.dev/type: tenant
